# WhisperLiveCppClient

./: CMakeLists.txt  README.md  microphone_live.cpp
